# Knowledge

./: .env.example  .gitignore  README.md  init.ps1  pyproject.toml
docs/: DataScrapping_가이드.md  GraphBuilder_RecursiveChunk_가이드.md  Ollama_로컬RAG_가이드.md  README.md
docs/guides/: 01_환경설정.md  02_데이터수집.md  03_그래프구축.md  04_검색시스템.md  05_웹시각화.md  06_API레퍼런스.md
docs/releases/: v0.1.0.md
notebooks/: 01_DataScrapping.ipynb  02_GraphBuilder.ipynb  03_ToolsRetriever.ipynb
web/: app.py  config.py  parser.py  rag.py
web/routers/: graph.py  health.py  query.py
web/services/: rag_service.py
web/static/: index.html
